# AnonChat

./: Cargo.toml  Dockerfile  README.md
src/: main.rs
static/css/: style.css
