[package]
name = "AnonChat"
version = "0.1.0"
edition = "2018"

[dependencies]
rocket = { version = "0.5.1", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
futures-util = "0.3"
urlencoding = "1.0"
html-escape = "0.2"